# CheXinterpret

./: .gitignore  README.md  pyproject.toml
cnn_baseline/: README.md
cnn_baseline/configs/: default.yaml  sweep_noaug.yaml  sweep_quick.yaml
configs/: default.yaml  publication.yaml  quickstart.yaml  sae_sweep.yaml  test.yaml
scripts/: audit_data.py  cache_chexpert_images.py  clear_cache.py  concept_analysis_pipeline.py  extract_features.py  fairness_intervention.py  init_paper_config.py  prepare_manifest.py  presentation_pipeline.py  run_core_paper.py  run_sae_sweep.py  run_study.py  run_supplement_paper.py  train_sae.py
src/chex_sae_fairness/: cli.py  config.py  constants.py  pipeline.py  study_runner.py  sweep.py
src/chex_sae_fairness/data/: chexpert_plus.py  feature_cache.py  splits.py
src/chex_sae_fairness/evaluation/: disentanglement.py  fairness.py
src/chex_sae_fairness/mitigation/: concept_debias.py
src/chex_sae_fairness/models/: chexagent_features.py  sae.py
src/cnn_baseline/: __init__.py  cli.py  config.py  dataset.py  evaluate.py  models.py  sweep.py  train.py
tests/: test_chexpert_plus_aliases.py  test_chexpert_plus_labels.py  test_chexpert_plus_missing_labels.py  test_chexpert_plus_paths.py  test_debias_modes.py  test_disentanglement.py  test_fairness.py  test_mitigation.py  test_prediction_metrics.py  test_publication_baselines.py  test_publication_common.py  test_publication_spec.py  test_publication_statistics.py  test_publication_tables.py  test_publication_validity.py  test_sae_variants.py  test_splits.py  test_study_runner.py
(+17 files in other folders)
